[package]
name = "rp2040-xinput-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5"}
critical-section = "1.2.0"
panic-halt = "1.0.0"

embedded-hal = { version = "1.0.0" }
embedded-time = "0.12.1"

rp2040-boot2 = "0.3.0"
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal.git", features = ["critical-section-impl", "rt"] }

usb-device= "0.3.2"
